[gd_scene load_steps=5 format=3 uid="uid://l7wxwtb8sjjg"]

[ext_resource type="ArrayMesh" uid="uid://qrc3s6jf8yq5" path="res://Art/Environment/Box/Box.res" id="1_w7n8r"]
[ext_resource type="Script" path="res://Scripts/Box.gd" id="2_cdkt3"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lyxrt"]
data = PackedVector3Array(-0.16, -0.16, -0.16, -0.16, 0.16, -0.16, -0.16, 0.16, 0.16, -0.16, 0.16, 0.16, -0.16, -0.16, 0.16, -0.16, -0.16, -0.16, 0.16, -0.16, 0.16, 0.16, 0.16, -0.16, 0.16, -0.16, -0.16, 0.16, 0.16, 0.16, 0.16, 0.16, -0.16, 0.16, -0.16, 0.16, 0.16, -0.16, 0.16, -0.16, -0.16, -0.16, -0.16, -0.16, 0.16, 0.16, -0.16, 0.16, 0.16, -0.16, -0.16, -0.16, -0.16, -0.16, 0.16, -0.16, -0.16, -0.16, 0.16, -0.16, -0.16, -0.16, -0.16, 0.16, -0.16, -0.16, 0.16, 0.16, -0.16, -0.16, 0.16, -0.16, -0.16, 0.16, 0.16, -0.16, 0.16, -0.16, 0.16, 0.16, -0.16, 0.16, 0.16, 0.16, -0.16, 0.16, 0.16, 0.16, 0.16, -0.16, 0.16, 0.16, 0.16, -0.16, -0.16, 0.16, -0.16, 0.16, 0.16, 0.16, 0.16, 0.16, 0.16, -0.16, 0.16, -0.16, -0.16, 0.16)

[sub_resource type="BoxShape3D" id="BoxShape3D_qxevf"]
size = Vector3(0.3, 0.25, 0.3)

[node name="Box" type="MeshInstance3D"]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = ExtResource("1_w7n8r")
script = ExtResource("2_cdkt3")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lyxrt")

[node name="DraggableArea" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="DraggableArea"]
shape = SubResource("BoxShape3D_qxevf")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
enabled = false

[node name="AnchorRight" type="Node3D" parent="."]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, 0.2, 0, 0)

[node name="AnchorLeft" type="Node3D" parent="."]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, -0.2, 0, 0)

[node name="AnchorForward" type="Node3D" parent="."]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, 0, 0, 0.2)

[node name="AnchorBehind" type="Node3D" parent="."]
transform = Transform3D(1, -9.64506e-13, 0, -1.0662e-12, 1, 0, 0, 0, 1, 0, 0, -0.2)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -10, 0)
